# drf_project

./: .env_template  .gitignore  docker-compose.yaml  pyproject.toml  readme.md
config/: settings.py  urls.py
users/migrations/: 0001_initial.py
vehicle/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car.py  0005_alter_milage_moto.py  0006_car_owner_moto_owner.py  0007_car_amount.py
